2008-10-24  Omair Majid <omajid@redhat.com>

	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioSourceDataLine.java
	(write): Check for offset being negative.
	* pulseaudio/unittests/org/classpath/icedtea/pulseaudio/PulseAudioClipTest.java
	(testMixerKnowsAboutOpenClips): Removed the assumption that mixer had no
	other lines open.

2008-10-24  Deepak Bhole  <dbhole@redhat.com>

	* plugin/icedtea/netscape/javascript/JSObject.java: Make long constructor
	public.

2008-10-24  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (clean-pulseaudio): Don't remove source files. Might
	not be correct, but doesn't do harm in any build environment.

2008-10-23  Deepak Bhole  <dbhole@redhat.com>

	* IcedTeaPlugin.cc: Implement proper timeout action.
	* plugin/icedtea/sun/applet/PluginAppletViewer.java: Supply new
	exitOnFailure argument to Netx.
	* rt/net/sourceforge/jnlp/Launcher.java: Implement an option for not
	exiting VM on error.
	* rt/net/sourceforge/jnlp/NetxPanel.java: Same.

2008-10-23  Lillian Angel  <langel@redhat.com>

	PR redhat/468193:
	* patches/icedtea-fonts.patch: Updated for filename change.

2008-10-23  Gary Benson  <gbenson@redhat.com>

	PR icedtea/229:
	* ports/hotspot/src/share/vm/shark/sharkBlock.cpp
	(SharkBlock::parse): Parse goto_w correctly.

2008-10-23  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (stamps/patch.stamp): Make sure rt dir exists when
	ENABLE_PLUGIN is true.

2008-10-23  Gary Benson  <gbenson@redhat.com>

	PR icedtea/204:
	* ports/hotspot/src/share/vm/shark/sharkState.cpp
	(SharkPHIState::initialize): Fix return address initialization.
	* ports/hotspot/src/share/vm/shark/sharkBlock.hpp
	(SharkBlock::jsr_ret_bci): Removed now-unnecessary code.
	* patches/icedtea-shark.patch
	(openjdk/hotspot/src/share/vm/ci/ciTypeFlow.hpp): Likewise.

2008-10-22  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am: Revert the previous change. Always pass DISTRIBUTION_ID
	instead.